--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -517,7 +517,6 @@ button:focus{
 .slider-card__img img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
     border-radius: 20px 20px 0 0;
 }
 .slider-card__content--etiqueta{
@@ -740,4 +739,21 @@ button:focus{
 .fondo-modal img{
     width: 100%;
     height: 100%;   
+}
+.nav-responsive{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: #f5f5f5;
+}
+.nav-responsive__main{
+    display: flex;
+    justify-content: space-around;
+}
+.nav-responsive__content{
+    padding: .5rem .8rem;
+    border-radius: 10px;
+}
+.nav-box{
+    box-shadow: 0px 0px 8px 0px rgba(112,112,112,0.57);
 }
