--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,10 +5,12 @@
 	.navbar-content{
 		justify-content: space-between;
 	}
-	
+	.main-banner__img--content{
+		height: 55vh;
+	}
 	.main-banner__text{
 		padding-left: 1rem;
-		top: 30%;
+		top: 20%;
 		width: 60%;
 	}
 	.slider-card__img img{
@@ -24,11 +26,15 @@
 		font-size: 1rem;
 	}
 	.subanner{
-		margin-top: -20px;
+		margin-top: 0px;
+		justify-content: start;
+		flex-wrap: wrap;
 	}
 	.subanner-content{
-		width: 19%;
+		width: 30%;
 		padding: .5rem;
+		margin-top: 0;
+		margin: .2rem;
 	}
 	.search-content input{
 		width: 51%;
@@ -53,11 +59,17 @@
 		font-size: 8px;
 	}
 	.main-publicidad{
-		height: 40vh;
-		margin-bottom: 10rem !important;
+		height: 30vh;
 	}
 	.main-publicidad__text{
-		position: static;
+		top: 30%;
+	}
+	.title-publicidad{
+		font-size: 1rem;
+	}
+	.subtitle-publicidad{
+		font-size: .6rem;
+		font-weight: 600;
 	}
 	.main-publicidad__bg{
 		height: 100%;
@@ -65,8 +77,7 @@
 	}
 	.main-publicidad__bg img{
 		height: 100%;
-		object-position: right;
-		object-fit: cover;
+		object-fit: contain;
 	}
 	.main-footer__text p{
 		font-size: 1rem;
@@ -106,6 +117,9 @@
 	}
 	.dropdown-menu {
     	transform: translate3d(-60px, 30px, 0) !important;
+	}
+	.slick-list.draggable{
+		padding-left: 0 !important;
 	}
 }
 
