--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,7 +154,7 @@ html{
   scroll-behavior: smooth;
 }
 body{
-    background: #f9f9f9;
+    background: #f9f9f9 !important;
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden ; 
 }
