--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -238,7 +238,7 @@
 		height: 80vh;
 	}
 	.subanner-content-category:after{
-		right: -.5rem;
+		right: -.2rem;
 	}
 	.main-cards__category, .main-cards--category__slider{
 		padding-left: 1rem;
@@ -405,7 +405,8 @@
 
 
 	.subanner-category{
-		flex-wrap: wrap;
+		width: 100%;
+		overflow-y: scroll;
 		margin-top: 0;
 	}
 	.subanner-content-category{
