--- a/wp-content/themes/Dasher/assets/css/main.css
+++ b/wp-content/themes/Dasher/assets/css/main.css
@@ -429,11 +429,16 @@ button:focus{
 }
 .slider-card__content{
     padding: 1rem;
+    height: 170px;
 }
 .slider-card__content--title{
+    display: grid;
+    grid-template-columns: 60% 40%;
+}
+.slider-card__conentvalue{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    align-items: end;
+    justify-content: flex-end; 
 }
 .slider-card__content--title p{
     color: #707070;
@@ -463,6 +468,7 @@ button:focus{
     width: 70px;
     border-radius: 10px;
     padding: 4px;
+    margin: 5px 0 10px 0;
 }
 .slider-card__content--etiqueta p{
     font-size: 8px;
@@ -494,6 +500,7 @@ button:focus{
     width: 100%;
     height: 100%;
     object-fit: contain;
+    border-radius: 50%;
 }
 .main-publicidad{
     position: relative;
