--- a/wp-content/themes/Dasher/assets/css/main.css
+++ b/wp-content/themes/Dasher/assets/css/main.css
@@ -1547,12 +1547,12 @@ button:focus{
 .form-banner-afiliado__title p{
   color: #f1ac00;
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 700;
 }
 .form-banner-afiliado__title span{
   color: #004857;
   font-size: 1.8rem;
-  font-weight: 600;
+  font-weight: 900;
 }
 .modelo-afiliado{
   padding-top: 6rem;
@@ -1574,24 +1574,23 @@ button:focus{
   font-weight: 900;
   color: #004857;
   padding-right: 8rem;
-  padding-bottom: 1rem;
+  padding-bottom: 3rem;
 }
 .text-modelo-afiliado__items--item{
   display: flex;
-  padding: .5rem 0;
+  padding: .5rem 5rem .5rem 0;
   align-items: center;
 }
 .text-modelo-afiliado__items{
   padding: 1rem;
 }
 .items-modelo-afiliado__item--img{
-  width: 25%;
   border-radius: 10px;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.21);
-  padding: 1rem;
+  padding: .5rem;
 }
 .items-modelo-afiliado__item--img img{
-  width: 100%;
+  width: 110px;
   height: 100%;
   object-fit: contain;
 }
@@ -1620,7 +1619,7 @@ button:focus{
   margin-top: 1.5rem;
   color: #707070;
 }
-.text-potencia-afilia__title, .title-pasos-afilia, .title-cliente-afilia p{
+.text-potencia-afilia__title, .title-pasos-afilia, .title-cliente-afilia p, .content-preguntas-afilia__title{
   font-size: 1.8rem;
   font-weight: 900;
   color: #004857;
@@ -1714,6 +1713,7 @@ button:focus{
   font-size: .8rem;
   color: #707070;
   padding: .5rem 0;
+  height: 100px;
 }
 .items-cliente-afilia__cliente{
   display: flex;
@@ -1740,7 +1740,61 @@ button:focus{
 .cliente-afilia{
   padding-top: 8rem;
 }
-
+.content-preguntas-afilia .card-header h2{
+  display: flex;
+  justify-content: space-between;
+}
+.btn-link{
+  transform: rotate(0);
+}
+/* .collapse-rotate{
+  transform: rotate(90deg);
+}
+ */
+ .preguntas-afilia{
+  padding: 6rem 0;
+ }
+ .main-fqa__center{
+  padding-top: 4rem;
+ }
+ .panel-heading {
+  padding: 0;
+  border: solid 1px rgba(255, 255, 255, 0.12);
+  margin-bottom: 10px;
+}
+ .panel-title>a, .panel-title>a:active{
+  display:block;
+  padding:15px;
+  color:#004857;
+  font-size:16px;
+  font-weight: 600;
+  text-transform:uppercase;
+  letter-spacing:1px;
+  word-spacing:3px;
+  transition: .3s ease-in-out;
+  text-decoration:none;
+}
+.panel-heading  a::before {
+ font-family: 'FontAwesome';
+ content: "\f0da";
+ float: right;
+ transition: all 0.5s;
+}
+.panel-heading.active a{
+  font-weight: 900;
+  transition: .3s ease-in-out;
+}
+.panel-heading.active a::before {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  transform: rotate(90deg);
+} 
+.panel-body{
+  box-shadow: 0px 3px 10px -6px rgba(0,0,0,0.64);
+  padding: 0 1.5rem 1rem;
+  border-radius: 5px;
+  color: #004857;
+}
 
 
 
@@ -2256,3 +2310,238 @@ button:focus{
             grid-template-columns: 40% 50% !important;
         }
     }
+
+
+
+
+/*-- multistep form --*/
+
+
+span.round-tab {
+  width: 40px;
+  height: 40px;
+  line-height: 30px;
+  display: flex;
+  border-radius: 50%;
+  background: transparent;
+  z-index: 2;
+  position: absolute;
+  left: 0;
+  text-align: center;
+  color: #f1ac00;
+  font-weight: 500;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+span.round-tab i {
+  color: #555555;
+}
+.wizard li.active span.round-tab {
+  background: #004857;
+  color: #fff;
+  font-size: 1.5rem;
+}
+.wizard li.active span.round-tab i {
+  color: #5bc0de;
+}
+.wizard .nav-tabs > li.active > a i {
+  color: #0db02b;
+}
+
+.wizard .nav-tabs > li {
+  width: 25%;
+}
+
+.wizard li:after {
+  content: " ";
+  position: absolute;
+  left: 46%;
+  opacity: 0;
+  margin: 0 auto;
+  bottom: 0px;
+  border: 5px solid transparent;
+  border-bottom-color: red;
+  transition: 0.1s ease-in-out;
+}
+
+.wizard .nav-tabs > li a {
+  width: 30px;
+  height: 30px;
+  margin: 20px auto;
+  border-radius: 100%;
+  padding: 0;
+  background-color: transparent;
+  position: relative;
+  top: 0;
+}
+.wizard .nav-tabs > li a i {
+  position: absolute;
+  top: -15px;
+  font-style: normal;
+  font-weight: 400;
+  white-space: nowrap;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 12px;
+  font-weight: 700;
+  color: #000;
+}
+
+.wizard .nav-tabs > li a:hover {
+  background: transparent;
+}
+
+.wizard .tab-pane {
+  position: relative;
+  padding-top: 4rem;
+}
+
+.wizard h3 {
+  margin-top: 0;
+  font-size: 18px;
+}
+.step-content {
+  background: #ececec;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px #c7c3c345;
+}
+.step-content span {
+  font-weight: 300;
+  font-size: 13px;
+}
+.content-row {
+  display: flex;
+  grid-gap: 12px;
+  margin-bottom: 15px;
+}
+.presupuesto {
+  background: #47c0d3;
+  border-radius: 10px;
+  color: #ffff;
+  padding: 0 17px;
+  margin-bottom: 20px;
+}
+.presupuesto span {
+  color: #ffff;
+  font-size: 12px;
+}
+.completado h4 {
+  color: #ec8603;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.completado span {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+
+.skip-btn {
+  background-color: #cec12d;
+}
+.step-head {
+  font-size: 20px;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.term-check {
+  font-size: 14px;
+  font-weight: 400;
+}
+.custom-file {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 0;
+}
+.custom-file-input {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  opacity: 0;
+}
+.custom-file-label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  height: 40px;
+  padding: 0.375rem 0.75rem;
+  font-weight: 400;
+  line-height: 2;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
+.custom-file-label::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 3;
+  display: block;
+  height: 38px;
+  padding: 0.375rem 0.75rem;
+  line-height: 2;
+  color: #495057;
+  content: "Browse";
+  background-color: #e9ecef;
+  border-left: inherit;
+  border-radius: 0 0.25rem 0.25rem 0;
+}
+.form-afiliar input{
+  background: transparent !important;
+    border: 2px solid #cb6120 !important;
+    border-radius: 20px !important;
+    padding: .3rem .8rem !important;
+    margin: 1rem 0 !important;
+    transition: .3s ease-in-out !important;
+    resize: none !important;
+    overflow: hidden;
+}
+.form-afiliar input[type="text"], .form-afiliar input[type="email"]{
+  width: 100% !important;
+    
+}
+
+.form-afiliar input:focus{
+    outline: none !important;
+    border-color: #f1ac00 !important;
+    transition: .3s ease-in-out !important;
+}
+
+.wizard-inner .nav-tabs{
+  justify-content: space-evenly;
+}
+.wizard .tab-pane h4{
+  color: #004857;
+  font-weight: 700;
+  font-size: 1.6rem
+}
+.form-afiliar__type{
+  padding-bottom: 2rem;
+}
+.form-afiliar__type p{
+  color: #004857;
+  margin-bottom: 1rem;
+  font-weight: 600;
+}
+.form-afiliar__type--btn a{
+  background: #dfdddd;
+  padding: .5rem 1.5rem;
+  border-radius: 25px;
+  margin-right: 1rem;
+  font-size: .8rem;
+  color: #004857;
+}
+.btn-form-afiliar{
+  padding: .4rem 3rem;
+}
