--- a/wp-content/themes/Dasher/assets/css/main.css
+++ b/wp-content/themes/Dasher/assets/css/main.css
@@ -1513,32 +1513,37 @@ button:focus{
 .content-banner-afiliado{
   position: relative;
 }
+.img-banner-afiliado__img{
+  height: 100%;
+}
 .img-banner-afiliado__img img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .img-banner-afiliado__text{
   position: absolute;
   top: 10%;
 }
 .img-banner-afiliado__text--title{
-  font-size: 1.6rem;
+  font-size: 2.5rem;
   font-weight: 900;
   text-align: center;
   color: #fff;
-  padding: 0 4rem;
+  padding: 0 5rem;
 }
 .img-banner-afiliado__text--img{
   text-align: center;
   padding: 6rem 0;
 }
 .img-banner-afiliado__text--img img{
-  width: 60px;
+  width: 80px;
 }
 .img-banner-afiliado__text--text{
   color: #fff;
-  padding: 0 3rem;
+  padding: 0 5rem;
   text-align: center;
+  font-size: 1.2rem
 }
 .form-banner-afiliado__title{
   padding-top: 3rem;
@@ -2401,6 +2406,8 @@ span.round-tab i {
 .wizard h3 {
   margin-top: 0;
   font-size: 18px;
+  color: #004857;
+  font-weight: 700;
 }
 .step-content {
   background: #ececec;
@@ -2541,6 +2548,12 @@ span.round-tab i {
   margin-right: 1rem;
   font-size: .8rem;
   color: #004857;
+  transition: .3s ease-in-out;
+}
+.form-afiliar__type--btn a:hover, .form-afiliar__type--btn a:focus{
+  background: #f1ac00;
+  color: #fff;
+  transition: .3s ease-in-out;
 }
 .btn-form-afiliar{
   padding: .4rem 3rem;
@@ -2548,20 +2561,48 @@ span.round-tab i {
 .button-group-pills .btn {
   border-radius: 20px;
   line-height: 1.2;
-  margin-bottom: 15px;
-  margin-left: 10px;
-  border-color: #bbbbbb;
-  background-color: #fff;
-  color: #14a4be;
+  margin:1rem 0;
+  background-color: #dfdddd;
+  color: #707070;
+  font-size: .9rem;
+  transition: .2s ease-in-out;
+  cursor: pointer;
 }
 .button-group-pills .btn.active {
-  border-color: #14a4be;
-  background-color: #14a4be;
+  border-color: #f1ac00;
+  background-color: #f1ac00;
   color: #fff;
   box-shadow: none;
 }
 .button-group-pills .btn:hover {
-  border-color: #158b9f;
-  background-color: #158b9f;
+  border-color: #f1ac00;
+  background-color: #f1ac00;
   color: #fff;
+  transition: .2s ease-in-out;
+}
+.btn-check-afiliar input[type="checkbox"]{
+  display: none;
+}
+.form-step2-afiliar__content p{
+  color: #004857;
+  padding-left: 2rem;
+}
+.content-form-step2 input{
+  background: transparent !important;
+    border: 2px solid #cb6120 !important;
+    border-radius: 20px !important;
+    padding: .3rem .8rem !important;
+    margin: .5rem 0 !important;
+    transition: .3s ease-in-out !important;
+    resize: none !important;
+    overflow: hidden;
+    width: 100%;
+    outline: none;
+}
+.content-form-step2{
+  padding-top: 1rem;
+}
+.content-form-step2__title{
+  color: #004857;
+  font-weight: 700;
 }
